[project]
name = "api-baldas-blog"
version = "0.1.0"
description = ""
authors = [
    {name = "wisnuhidayat",email = "wisnubaldas@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.128.8,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)"
]

[project.scripts]
dev = "app.cli:dev"
prod = "app.cli:prod"
start = "app.cli:prod"

[tool.poetry]
packages = [{ include = "app" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
