[project]
name = "api-baldas-blog"
version = "0.1.0"
description = ""
authors = [
    {name = "wisnuhidayat",email = "wisnubaldas@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.95.2,<0.96.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "pydantic (>=1.10.13,<2.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "fastapi-jwt-auth (>=0.5.0,<0.6.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "bcrypt (<4.0.0)"
]

[project.scripts]
dev = "app.cli:dev"
prod = "app.cli:prod"
start = "app.cli:prod"
seed = "app.cli:seed"

[tool.poetry]
packages = [{ include = "app" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
